# norviq

./: .checkov.yaml  .dockerignore  .env.example  .env.local.example  .fossa.yml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  .tmp_commit_ci.sh  .tmp_commit_push.sh  .trivyignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.engine  Dockerfile.ui  Makefile  PYPI-README.md  README.md  SECURITY.md  artifacthub-repo.yml  comprehensive.rego  comprehensive_test.rego  docker-compose.dev.yml  download_specs.sh  go.mod  input.json  pyproject.toml  simple.rego
.cursor/agents/: norviq-correctness-auditor.md  norviq-performance-auditor.md  norviq-security-auditor.md  norviq-verifier.md
.cursor/commands/: parallel-review-and-fix.md
.cursor/rules/: coder.mdc  diagram.mdc  fixer.mdc  registry.mdc  review-ui.mdc  review.mdc  subagent-delegation.mdc  tester.mdc
.github/workflows/: build.yml  ci.yml  deploy.yml  fossa.yml  framework-compat.yml  pypi-publish.yml  release.yml  security.yml
.reviews/: S001.md  S002.md  S003.md
.reviews/live-pentest/: ACCURACY.md  CLOSEOUT-F40.md  CLOSEOUT-F69.md  CLOSEOUT-FLEET-MGMT.md  CLOSEOUT-RELEASE.md  CLOSEOUT-ROUND2.md  CLOSEOUT-SINGLE-CLUSTER-FIRST.md  CLOSEOUT-UI-QUALITY.md  CLOSEOUT-UI.md  CLOSEOUT.md  E2E-KIND-9a32783-raw-findings.md  E2E-KIND-9a32783.md  FINAL-PENTEST-PRE-GA.md  FINDINGS.md  INCIDENT-TIMELINE.md  NIW-APPENDIX.md  PERF-TELEMETRY.md  PORTAL-VALIDATION.md  PRE-RELEASE-REMEDIATION-PLAN.md  RECON.md  REPORT.md  REVIEW-FIXES-PR12.md  UI-AUDIT-ROUND2.md  UI-AUDIT.md
.serena/: project.yml
.serena/memories/: architecture_and_flow.md  codebase_structure.md  conventions_and_review.md  dev_setup_and_run.md  eval-closeout-tierB.md  eval-tier-a-remediation.md  fleet-mvp-p1.md  fleet_p2_signed_push_aks.md  identity-epic-live-local.md  identity-epic-oidc-spiffe-core.md  mcp_workflow.md  opa-as-server.md  project_overview.md  task_completion_checklist.md
architecture/: DAY9-UI.mmd  F001.class.mmd  F001.deps.mmd  F001.mmd  F001.sequence.mmd  F002.class.mmd  F002.deps.mmd  F002.mmd  F002.sequence.mmd  F003.class.mmd  F003.deps.mmd  F003.mmd  F003.sequence.mmd  F005.class.mmd  F005.deps.mmd  F005.mmd  F005.sequence.mmd  F006.class.mmd  F006.deps.mmd  F006.mmd  F006.sequence.mmd  F007.class.mmd  F007.deps.mmd  F007.mmd  F007.sequence.mmd  F008.class.mmd  F008.deps.mmd  F008.mmd  F008.sequence.mmd  F009.class.mmd  F009.deps.mmd  F009.mmd  F009.sequence.mmd  F010.class.mmd  F010.deps.mmd  F010.mmd  F010.sequence.mmd  F011.class.mmd  F011.deps.mmd  F011.sequence.mmd  (+70 more)
crds/examples/: class-customer-support.yaml  class-data-analyst.yaml  config-default.yaml  policy-custom-rego.yaml  policy-moderate-analyst.yaml  policy-namespace-baseline.yaml  policy-strict-chatbot.yaml
docs/: WORKFLOW.md  backlog.md  concepts.md  configuration.md  deployment.md  error-codes.md  getting-started.md  mcp-workflow.md  norviq-ops-guide.md  onboarding-asset-graph.md  onboarding-login.md  registry-capabilities.md  security-model.md  trust-score-design.md
docs/design-system/: .thumbnail  README.md  SKILL.md  colors_and_type.css
docs/engineering/: aks-operations.md  bug-patterns.md  fleet-architecture.md  fleet-enrollment.md  namespace-scoping.md  opa-input-schema.md  pep-input-only-scope.md  prod-deploy-runbook.md  production-config.md  release-runbook.md  security-baseline.md  test-baseline-discipline.md
docs/guides/: integrating-agents.md  writing-policies.md
examples/: README.md
examples/chatbot/: .env.example  Dockerfile  README.md  agent.py  agent_autogen.py  agent_crewai.py  agent_langgraph.py  agent_semantic_kernel.py  app.py  chat_ui.py  requirements.txt  serve.py  tools.py
helm/norviq/: .helmignore  Chart.yaml  README.md  values-aks-dev.yaml  values-dev.yaml  values-light.yaml  values-prod.yaml  values.schema.json  values.yaml
norviq/: config.py  exceptions.py  fleet_puller.py  fleet_relay.py
norviq/api/: admin_reset.py  api_keys.py  audit_hub.py  audit_retention.py  auth.py  body_limit.py  jwks.py  main.py  packs.py  passwords.py  rate_limit.py  redteam_efficacy.py  retention.py  session_revocation.py  siem.py  synthetic.py  threat_intent.py  token_mint.py
norviq/cli/: __init__.py  api_client.py  formatters.py  main.py
norviq/engine/: __init__.py  attack_graph.py  attack_graph_models.py  audit_emitter.py  cache.py  confusables.py  evaluator.py  identity.py  inproc_cache.py  masking.py  opa_client.py  policy_loader.py
norviq/fleet/: bundle.py  db.py  join_token.py  main.py  models.py  oidc_cc.py  pinned_transport.py  schemas.py  ssrf_guard.py
norviq/redteam/: __init__.py  attacks.py  payloads.py  reporter.py  runner.py  simulator.py
norviq/sdk/: __init__.py
norviq/sidecar/: __init__.py  __main__.py  http_fallback.py  proxy.py  (+1 more)
policies/: README.md  category_mapping.json  mitre_mapping.json  owasp_llm_mapping.json  threat_intent_sample.rego  threat_intent_test.rego
registry/: S001.md  S002.md  S003.md
scripts/: aks-verify.ps1  check_release_versions.py  check_wheel_contents.py  cluster-probe.mjs  cluster-switch-test.mjs  debug-page.mjs  dev-setup.ps1  dev.ps1  diagnose-pg.py  diagnose-sqlalchemy.py  e2e.sh  gate-f022.sh  gate-f027.sh  gate-f036-f037.sh  gate-f040.sh  gate-f041.sh  gen-opa-capabilities.py  ns-payments-redteam.mjs  release_stamp.py  review-ui.sh  review.sh  seed-local-policies.py  serena-refresh.sh  sync-crds.sh  ui-scout.mjs  verify.sh
specs/: S001.md  S002.md  S003.md
tests/: .baseline  conftest.py  test_config.py  test_exceptions.py
ui/: .env.local.example  .env.production  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
webhook/: Dockerfile  config.go  controller.go  controller_retry_test.go  controller_test.go  go.mod  go.sum  handler.go  handler_def052_test.go  handler_injection_integrity_test.go  handler_test.go  injector.go  injector_test.go  injector_writable_tmp_test.go  main.go  main_test.go  mtls_test.go
(+786 files in other folders)
