[project]
name = "norviq"
version = "0.1.0"
description = "Runtime policy enforcement for LLM agent tool calls on Kubernetes."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Norviq" }]
keywords = ["llm", "agents", "security", "policy-enforcement", "opa", "kubernetes", "ai-safety"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "httpx>=0.24",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "opentelemetry-exporter-prometheus>=0.41b0",
    "prometheus-client>=0.20",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "networkx>=3.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "websockets>=12",
    "pyjwt[crypto]>=2.8",
    "passlib[bcrypt]>=1.7",
]

[project.scripts]
norviq = "norviq.cli.main:main"

[project.urls]
Homepage = "https://norviq.dev"
Documentation = "https://docs.norviq.dev"
Repository = "https://github.com/norviq-dev/norviq"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx", "ruff>=0.2"]
# Real SPIFFE workload identity (NRVQ_SPIFFE_MODE=workload-api). Optional + import-guarded so mock
# mode (default) and CI/attack venvs install lean; only real SPIRE deployments need it.
spiffe = ["spiffe>=0.2"]
# SDK framework adapters (norviq/sdk/**). Each is import-guarded — the adapter module only
# imports its framework lazily inside a loader function — so installing norviq alone never pulls
# any of these in; pick the extra(s) matching the agent framework(s) you actually use.
langchain = ["langchain-core>=0.2"]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.80"]
autogen = ["autogen-core>=0.4"]
semantic-kernel = ["semantic-kernel>=1.0"]
frameworks = [
    "langchain-core>=0.2",
    "langgraph>=0.2",
    "crewai>=0.80",
    "autogen-core>=0.4",
    "semantic-kernel>=1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Security floor for a transitive dependency. werkzeug is pulled only by the optional
# semantic-kernel framework extra (via openapi-core) — never by the shipped `.[spiffe]` runtime image.
# 3.1.6 fixes CVE-2025-66221 / CVE-2026-21860 / CVE-2026-27199 (Windows safe_join device-name
# path-traversal / DoS in send_from_directory); resolves to the latest 3.1.x (3.1.8). See SECURITY.md.
constraint-dependencies = ["werkzeug>=3.1.6"]

[tool.ruff]
line-length = 120
target-version = "py311"

# Bandit SAST config (used by pre-commit + security.yml). Skip tests + attack payloads (which
# intentionally contain injection strings). Baseline exclusions are triaged in
# docs/engineering/security-baseline.md; do not broaden `skips` without a recorded rationale.
[tool.bandit]
exclude_dirs = ["tests", "norviq/redteam", "norviq/sdk/attacks", ".venv"]
skips = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Put the repo root on sys.path so `from tests.conftest import ...` resolves under a
# bare `pytest` invocation (make test), matching `python -m pytest` behavior.
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["norviq*"]
